# python_ml_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scaler.pkl  weather_model.h5
.github/: deploy_dev.yaml  dev_deploy.yaml
.github/workflows/: deploy-dev.yml
