[project]
name = "python-webserver-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "numpy~=1.26.0",  # Downgraded to 1.x version
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.14.0",
    "uvicorn[standard]>=0.34.3",
]